# the-witness-solver

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  puzzle.rs  solve.rs
tests/: dots.rs  simple.rs  squares.rs  suns.rs
